--- a/index.html
+++ b/index.html
@@ -11,24 +11,21 @@
 </head>
 <body>
 <!-- top info -->
-<div class="container-fluid text-center text-danger bg-light pt-2 pb-2"><strong>Call <a class="link-danger" href="#">808-123-4567</a> or <a class="link-danger" href="#">chat</a> to get exclusive savings and experts advice from a Gear Adviser</strong></div>
+<div class="container-fluid text-center text-danger bg-light pt-2 pb-2"><strong>Call <a class="link-danger" href="#">808-123-4567</a> or <a class="link-danger" href="#">chat</a> to get exclusive savings and experts advice from a Gear Adviser</strong>
+</div>
 <!-- main menu -->
 <nav class="navbar bg-body-tertiary pt-0 pb-0">
   <div class="container">
     <ul class="nav align-items-center">
-
       <li class="nav-item">
         <img class="bg-danger" src="gc-logo-white.svg" alt="Logo" width="143" height="91">
       </li>
-
       <li class="nav-item">
-
         <button class="btn mx-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
           <div class="bg-dark pt-1 my-1"></div>
           <div class="bg-dark pt-1 my-1"></div>
           <div class="bg-dark pt-1"></div>
           <span>SHOP</span></button>
-
         <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
           <div class="offcanvas-header text-light bg-dark">
             <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Sign In</h5>
@@ -41,36 +38,31 @@
             <div class="my-2">Deals</div>
           </div>
         </div>
-
       </li>
       <li class="nav-item">
-
-            <div class="input-group my-3 mx-5">
+        <div class="input-group my-3 mx-5">
           <div class="form-floating">
             <input type="text" class="form-control modal-input" id="floatingInputGroup1" placeholder="Find your sound">
             <label for="floatingInputGroup1">Find your sound</label>
           </div>
           <span class="input-group-text bg-transparent"><i class="bi bi-search"></i></span>
         </div>
-
       </li>
-
     </ul>
-<ul class="nav align-items-center">
-  <li class="nav-item mx-3 my-3">
-    <div class="mx-3"><strong>Live help</strong></div>
-    <div class="mx-3">808-123-4567</div>
-  </li>
-  <li class="nav-item mx-3 my-3">
-    <div class="mx-3"><i class="bi bi-person-fill text-danger"></i></div>
-    <span>Sign In</span>
-  </li>
-  <li class="nav-item mx-3 my-3">
-    <div class="mx-2"><i class="bi bi-cart4 text-danger"></i></div>
-    <div><span>Cart</span></div>
-  </li>
-</ul>
-
+    <ul class="nav align-items-center">
+      <li class="nav-item mx-3 my-3">
+        <div class="mx-3"><strong>Live help</strong></div>
+        <div class="mx-3">808-123-4567</div>
+      </li>
+      <li class="nav-item mx-3 my-3">
+        <div class="mx-3"><i class="bi bi-person-fill text-danger"></i></div>
+        <span>Sign In</span>
+      </li>
+      <li class="nav-item mx-3 my-3">
+        <div class="mx-2"><i class="bi bi-cart4 text-danger"></i></div>
+        <div><span>Cart</span></div>
+      </li>
+    </ul>
   </div>
 </nav>
 <!-- my store -->
@@ -78,7 +70,6 @@
   <nav class="navbar bg-body-tertiary pt-0 pb-0">
     <div class="container">
       <ul class="nav align-items-center">
-
         <li class="nav-item">
           <img class="" src="my-store-black.svg" alt="Store" width="40" height="40">My Store <strong><a class="link-dark" href="#">Select store</a></strong>
         </li>
@@ -87,7 +78,6 @@
         </li>
       </ul>
       <ul class="nav align-items-center">
-
         <li class="nav-item">
           <div class="text-danger">Try lessons</div>
         </li>
@@ -113,31 +103,94 @@
         </li>
         <li class="nav-item mx-2">
           <div class="dropdown">
-          <div class="dropdown-toggle">
-            More
+            <div class="dropdown-toggle">
+              More
+            </div>
           </div>
-        </div>
         </li>
       </ul>
     </div>
   </nav>
 </div>
-<div class="container-fluid bg-dark">
-
+<!-- banner -->
+<video class="w-100" autoplay loop muted>
+  <source src="2024_GC_TOver_PresDay_Desktop.mp4" type="video/mp4"/>
+</video>
+<!-- category -->
+<div class="pt-3 pb-3">
+  <h3 class="text-center">Shop Deals by Category</h3>
+</div>
+<!-- cards -->
+<div class="container">
   <div class="row">
-    <div class="col">
-
-
-  <video class="w-100" autoplay loop muted>
-    <source src="2024_GC_TOver_PresDay_Desktop.mp4" type="video/mp4" />
-  </video>
+    <div class="col-2">
+      <div class="card text-center border-white">
+        <img src="electric-guitar.jpg" class="card-img" alt="Electric Guitar">
+        <div class="card-body">
+          <p class="card-title">Electric Guitars</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="card text-center border-white">
+        <img src="acoustic-guitar.jpg" class="card-img" alt="Acoustic Guitar">
+        <div class="card-body">
+          <p class="card-title">Acoustic Guitars</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="card text-center border-white">
+        <img src="keyboards.jpg" class="card-img" alt="Keyboards">
+        <div class="card-body">
+          <p class="card-title
+          ">Keys & Controllers
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="card text-center border-white">
+        <img src="recording.jpg" class="card-img" alt="Recording">
+        <div class="card-body">
+          <p class="card-title
+          ">Studio Recording
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="card text-center border-white">
+        <img src="sound.jpg" class="card-img" alt="Sound">
+        <div class="card-body">
+          <p class="card-title
+          ">Live Sound
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="card text-center border-white">
+        <img src="amp.jpg" class="card-img" alt="Amp">
+        <div class="card-body">
+          <p class="card-title
+          ">Amp & Effects
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="card text-center border-white">
+        <img src="drums.jpg" class="card-img" alt="Drums">
+        <div class="card-body">
+          <p class="card-title
+          ">Drums
+          </p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
-<!-- banner -->
-<!-- category -->
-<!-- cards -->
-
 </body>
 <!-- footer -->
 <footer>
